--- a/backend/package.json
+++ b/backend/package.json
@@ -21,10 +21,16 @@
 		"@types/cors": "^2.8.16",
 		"@types/express": "^4.17.21",
 		"@types/morgan": "^1.9.9",
+		"bcrypt": "^5.1.1",
 		"cors": "^2.8.5",
+		"dotenv": "^16.4.1",
 		"express": "^4.18.2",
 		"express-async-handler": "^1.2.0",
 		"module-alias": "^2.2.3",
+		"mongoose": "^8.1.1",
 		"morgan": "^1.10.0"
+	},
+	"devDependencies": {
+		"@types/bcrypt": "^5.0.2"
 	}
 }
