--- a/app/codux.config.json
+++ b/app/codux.config.json
@@ -1,7 +1,11 @@
 {
+  "$schema": "https://wixplosives.github.io/codux-config-schema/codux.config.schema.json",
   "resolve": {
     "alias": {
       "@/*": "./src/*"
     }
+  },
+  "newComponent": {
+    "componentsPath": "src/components"
   }
 }
