--- a/backend/package.json
+++ b/backend/package.json
@@ -18,20 +18,26 @@
 		"@": "dist"
 	},
 	"dependencies": {
+		"@types/cookie-parser": "^1.4.6",
 		"@types/cors": "^2.8.16",
 		"@types/express": "^4.17.21",
+		"@types/jsonwebtoken": "^9.0.5",
 		"@types/morgan": "^1.9.9",
 		"@types/uuid": "^9.0.8",
 		"bcrypt": "^5.1.1",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.1",
 		"express": "^4.18.2",
 		"express-async-handler": "^1.2.0",
+		"http-status-codes": "^2.3.0",
+		"jsonwebtoken": "^9.0.2",
 		"kleur": "^4.1.5",
 		"module-alias": "^2.2.3",
 		"mongoose": "^8.1.1",
 		"morgan": "^1.10.0",
-		"uuid": "^9.0.1"
+		"uuid": "^9.0.1",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
