--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/themes": "^2.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "shadcn-ui": "^0.8.0",
