--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
 		"@types/express": "^4.17.21",
 		"@types/jsonwebtoken": "^9.0.5",
 		"@types/morgan": "^1.9.9",
+		"@types/nodemailer": "^6.4.14",
 		"@types/uuid": "^9.0.8",
 		"bcrypt": "^5.1.1",
 		"cookie-parser": "^1.4.6",
@@ -36,6 +37,7 @@
 		"module-alias": "^2.2.3",
 		"mongoose": "^8.1.1",
 		"morgan": "^1.10.0",
+		"nodemailer": "^6.9.9",
 		"uuid": "^9.0.1",
 		"zod": "^3.22.4"
 	},
