--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
+    "react-resizable-panels": "^2.0.3",
     "react-router-dom": "^6.22.0",
     "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.2.1",
