--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
 		"dotenv": "^16.4.1",
 		"express": "^4.18.2",
 		"express-async-handler": "^1.2.0",
+		"express-rate-limit": "^7.1.5",
 		"http-status-codes": "^2.3.0",
 		"jsonwebtoken": "^9.0.2",
 		"kleur": "^4.1.5",
