--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,9 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/themes": "^2.0.3",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0-rc22",
@@ -27,6 +29,7 @@
     "react-hook-form": "^7.50.0",
     "react-resizable-panels": "^2.0.3",
     "react-router-dom": "^6.22.0",
+    "react-spinners": "^0.13.8",
     "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
