--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "tsc -b && node ./dist/index.js"
+		"start": "tsc -b && node ./dist/index.js",
+		"prod": "ts-node index.ts"
 	},
 	"keywords": [
 		"template",
@@ -18,6 +19,7 @@
 		"@": "dist"
 	},
 	"dependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/cookie-parser": "^1.4.6",
 		"@types/cors": "^2.8.16",
 		"@types/express": "^4.17.21",
@@ -39,11 +41,8 @@
 		"mongoose": "^8.1.1",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.9.9",
+		"ts-node": "^10.9.2",
 		"uuid": "^9.0.1",
 		"zod": "^3.22.4"
-	},
-	"devDependencies": {
-		"@types/bcrypt": "^5.0.2",
-		"ts-node": "^10.9.2"
 	}
 }
