--- a/app/package.json
+++ b/app/package.json
@@ -35,6 +35,7 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "timeago.js": "^4.0.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
