--- a/app/package.json
+++ b/app/package.json
@@ -32,8 +32,10 @@
     "react-router-dom": "^6.22.0",
     "react-spinners": "^0.13.8",
     "shadcn-ui": "^0.8.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "timeago.js": "^4.0.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
