--- a/backend/package.json
+++ b/backend/package.json
@@ -1,48 +1,56 @@
 {
-	"name": "anonymous-backend",
-	"version": "0.0.0",
-	"private": "true",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "tsc -b && node ./dist/index.js",
-		"prod": "ts-node index.ts"
-	},
-	"keywords": [
-		"template",
-		"express",
-		"backend"
-	],
-	"author": "https://github.com/coderoyalty",
-	"license": "MIT",
-	"_moduleAliases": {
-		"@": "dist"
-	},
-	"dependencies": {
-		"@types/bcrypt": "^5.0.2",
-		"@types/cookie-parser": "^1.4.6",
-		"@types/cors": "^2.8.16",
-		"@types/express": "^4.17.21",
-		"@types/jsonwebtoken": "^9.0.5",
-		"@types/morgan": "^1.9.9",
-		"@types/nodemailer": "^6.4.14",
-		"@types/uuid": "^9.0.8",
-		"bcrypt": "^5.1.1",
-		"cookie-parser": "^1.4.6",
-		"cors": "^2.8.5",
-		"dotenv": "^16.4.1",
-		"express": "^4.18.2",
-		"express-async-handler": "^1.2.0",
-		"express-rate-limit": "^7.1.5",
-		"http-status-codes": "^2.3.0",
-		"jsonwebtoken": "^9.0.2",
-		"kleur": "^4.1.5",
-		"module-alias": "^2.2.3",
-		"mongoose": "^8.1.1",
-		"morgan": "^1.10.0",
-		"nodemailer": "^6.9.9",
-		"ts-node": "^10.9.2",
-		"uuid": "^9.0.1",
-		"zod": "^3.22.4"
-	}
+  "name": "anonymous-backend",
+  "version": "0.0.0",
+  "private": "true",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest",
+    "start": "tsc -b && node ./dist/index.js",
+    "prod": "ts-node index.ts"
+  },
+  "keywords": [
+    "template",
+    "express",
+    "backend"
+  ],
+  "author": "https://github.com/coderoyalty",
+  "license": "MIT",
+  "_moduleAliases": {
+    "@": "dist"
+  },
+  "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.16",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
+    "@types/nodemailer": "^6.4.14",
+    "@types/uuid": "^9.0.8",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.1.5",
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "kleur": "^4.1.5",
+    "module-alias": "^2.2.3",
+    "mongoose": "^8.1.1",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.9",
+    "ts-node": "^10.9.2",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.3.3"
+  }
 }
