--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.9.9",
 		"ts-node": "^10.9.2",
+		"typescript": "^5.3.3",
 		"uuid": "^9.0.1",
 		"zod": "^3.22.4"
 	}
