--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
 		"module-alias": "^2.2.3",
 		"mongoose": "^8.1.1",
 		"morgan": "^1.10.0",
+		"nanoid": "3",
 		"nodemailer": "^6.9.9",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.3.3",
