chore(deps): add shadcn input-otp component

--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "embla-carousel-react": "^8.0.0-rc22",
     "framer-motion": "^11.0.3",
     "html-to-image": "^1.11.11",
+    "input-otp": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
